app/docs/2.0.x/generated/cmd/kumactl/kumactl_inspect.md
---
title: kumactl inspect
---

Inspect Kuma resources

### Synopsis

Inspect Kuma resources.

### Options

```
  -h, --help            help for inspect
  -o, --output string   output format: one of table|yaml|json (default "table")
```

### Options inherited from parent commands

```
      --api-timeout duration   the timeout for api calls. It includes connection time, any redirects, and reading the response body. A timeout of zero means no timeout (default 1m0s)
      --config-file string     path to the configuration file to use
      --log-level string       log level: one of off|info|debug (default "off")
      --no-config              if set no config file and config directory will be created
```

### SEE ALSO

* [kumactl](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl)	 - Management tool for Kuma
* [kumactl inspect circuit-breaker](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_circuit-breaker)	 - Inspect CircuitBreaker
* [kumactl inspect dataplane](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_dataplane)	 - Inspect Dataplane
* [kumactl inspect dataplanes](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_dataplanes)	 - Inspect Dataplanes
* [kumactl inspect fault-injection](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_fault-injection)	 - Inspect FaultInjection
* [kumactl inspect healthcheck](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_healthcheck)	 - Inspect HealthCheck
* [kumactl inspect meshaccesslog](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_meshaccesslog)	 - Inspect MeshAccessLog
* [kumactl inspect meshes](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_meshes)	 - Inspect Meshes
* [kumactl inspect meshgateway](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_meshgateway)	 - Inspect MeshGateway
* [kumactl inspect meshtrace](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_meshtrace)	 - Inspect MeshTrace
* [kumactl inspect meshtrafficpermission](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_meshtrafficpermission)	 - Inspect MeshTrafficPermission
* [kumactl inspect proxytemplate](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_proxytemplate)	 - Inspect ProxyTemplate
* [kumactl inspect rate-limit](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_rate-limit)	 - Inspect RateLimit
* [kumactl inspect retry](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_retry)	 - Inspect Retry
* [kumactl inspect services](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_services)	 - Inspect Services
* [kumactl inspect timeout](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_timeout)	 - Inspect Timeout
* [kumactl inspect traffic-log](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_traffic-log)	 - Inspect TrafficLog
* [kumactl inspect traffic-permission](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_traffic-permission)	 - Inspect TrafficPermission
* [kumactl inspect traffic-route](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_traffic-route)	 - Inspect TrafficRoute
* [kumactl inspect traffic-trace](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_traffic-trace)	 - Inspect TrafficTrace
* [kumactl inspect zone-ingresses](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_zone-ingresses)	 - Inspect Zone Ingresses
* [kumactl inspect zoneegress](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_zoneegress)	 - Inspect ZoneEgress
* [kumactl inspect zoneegresses](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_zoneegresses)	 - Inspect Zone Egresses
* [kumactl inspect zoneingress](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_zoneingress)	 - Inspect ZoneIngress
* [kumactl inspect zones](/docs/{{ page.release }}/generated/cmd/kumactl/kumactl_inspect_zones)	 - Inspect Zones

